--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@
 ### v1
 
 [x] if/else
-[ ] string interpolation
+[x] string interpolation
 [x] special syntax for dealing with empty-collection case
 
 ### future
